# fpack

./: .flake8  .pre-commit-config.yaml  .travis.yml  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
fpack/: __init__.py  fields.py  msg.py  utils.py
tests/: test_fpack_field.py  test_fpack_msg.py  test_fpack_utils.py
