[tool.poetry]
name = "fpack"
version = "1.0.3"
description = "fpack is a simple message (de)seriealizer in pure python"
authors = ["Frank Chang <frank@csie.io>"]
repository = "https://github.com/frankurcrazy/fpack"
license = "BSD-3-clause"
keywords = ["serializer", "unserializer", "packer", "unpacker"]

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
