[tool.poetry]
name = "fpack"
version = "1.0.3"
description = "fpack is a simple message (de)seriealizer in pure python"
authors = ["Frank Chang <frank@csie.io>"]
repository = "https://github.com/frankurcrazy/fpack"
license = "BSD-3-Clause"
keywords = ["serializer", "unserializer", "packer", "unpacker"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^21.4b2"
coverage = "^5.3"
python-semantic-release = "^7.2.5"
pre-commit = "^2.7.1"

[tool.semantic_release]
version_variable = [
    "fpack/__init__.py:__version__",
    "pyproject.toml:version"
]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
